# VLM_object_pointcloud_robotTF

./: .gitignore  README.md
docs/: NEXT_STEPS_EXECUTION_SAFETY.md  STAGE1_CAMERA_ONLY_SCAN.md  STAGE3_MOVEIT_PLAN_ONLY.md  stage4_side_grasp_plan_only_20260705.md  stage5_strict_side_grasp_candidate_planner_20260706.md
src/arm_only_ee_joystick_control/: CMakeLists.txt  package.xml
src/arm_only_ee_joystick_control/launch/: camera_only_scan_once_cpp.launch.py  camera_to_robot_tf_stage2.launch.py  moveit_grasp_candidate_plan.launch.py  moveit_ik_workspace_probe.launch.py  moveit_plan_sequence_pregrasp_to_grasp.launch.py  moveit_plan_side_grasp.launch.py  moveit_plan_to_grasp_preview.launch.py  moveit_plan_to_pregrasp_preview.launch.py  robot_target_pose_preview.launch.py  rs_py_rgbd_camera.launch.py  stage2_moveit_object_overlay.launch.py
src/arm_only_ee_joystick_control/scripts/: rs_py_rgbd_camera_node
src/arm_only_ee_joystick_control/src/: camera_only_scan_once_cpp_node.cpp  camera_to_robot_tf_cpp_node.cpp  moveit_grasp_candidate_plan_cpp_node.cpp  moveit_ik_workspace_probe_cpp_node.cpp  moveit_plan_sequence_cpp_node.cpp  moveit_plan_side_grasp_cpp_node.cpp  moveit_plan_to_pose_cpp_node.cpp  robot_target_pose_cpp_node.cpp
tools/: aruco_cube_realsense_viewer.py  aruco_cube_tf_calibrator.py  depth_center_probe.py
