<?xml version="1.0"?>
<package format="3">
  <name>arm_only_ee_joystick_control</name>
  <version>0.2.0</version>
  <description>Camera-only scan-once object pointcloud and robot-frame TF pipeline.</description>

  <maintainer email="jhj0129@example.com">jhj0129</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>opencv</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>

  <exec_depend>ros2launch</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
